--- a/_config.yml
+++ b/_config.yml
@@ -30,7 +30,7 @@ twitter_username: anidealgift
 github_username:  anidealgift
 
 # Build settings
-theme: Cayman
+theme: jekyll-theme-cayman
 plugins:
   - jekyll-feed
 
